--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title>lista cognomi</title>
   </head>
   <body>
-    <ul id="listaOrdinata">
-
-    </ul>
+    <ol id="listaOrdinata">
+    </ol>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
